--- a/source/layouts/includes/header.jade
+++ b/source/layouts/includes/header.jade
@@ -1,3 +1,10 @@
 ﻿header.b-header
+    
+  .b-top-menu
+    
+    a( href="" ) ГОРОДСКАЯ НЕДВИЖИМОСТЬ
+    a( href="" ) ЗАГОРОДНАЯ НЕДВИЖИМОСТЬ
+    a( href="" ) ЗАРУБЕЖНАЯ НЕДВИЖИМОСТЬ
+    a( href="" ) КОММЕРЧЕСКАЯ НЕДВИЖИМОСТЬ
 
-  .b-phone 8 499 999 34 45
+  .b-phone +7 499 999 34 45
