--- a/source/styl/header.styl
+++ b/source/styl/header.styl
@@ -2,12 +2,11 @@
   background-color $header-bg
   color #333
   border none
-  padding 20px 50px 5px 177px
+  padding 20px 50px
   box-sizing( content-box )
   min-height 42px
-  
-  .b-block-b.i-reverse &
-    padding-left 50px
+  max-height 81px
+  box-sizing border-box
   
   a
     
@@ -33,7 +32,7 @@
   text-align right
   font-size 9pt
   font-weight 700
-  color #e5241f !important
+  color #333 !important
   width 20%
     
   @media ( max-width 767px )
