Fixes for group page

--- a/dest/template/template_styles.css
+++ b/dest/template/template_styles.css
@@ -833,8 +833,7 @@ ul li {
   -webkit-box-sizing: content-box;
   -moz-box-sizing: content-box;
   box-sizing: content-box;
-  min-height: 42px;
-  max-height: 81px;
+  min-height: 81px;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
@@ -849,6 +848,7 @@ ul li {
     margin-top: 45px;
     padding: 35px 20px !important;
     min-height: 0;
+    max-height: inherit;
     text-align: center;
   }
 }
@@ -886,7 +886,7 @@ a.b-estate-logo {
   a.b-estate-logo {
     margin: 0 0 20px;
     float: none;
-    width: auto;
+    width: auto !important;
   }
 }
 .b-top-menu {
