Fixes for the estate page

--- a/dest/template/template_styles.css
+++ b/dest/template/template_styles.css
@@ -838,6 +838,31 @@ ul li {
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
+.b-header__fixed {
+  background-color: #ececec;
+  padding: 20px 50px;
+  min-height: 81px;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  position: fixed;
+  top: 0;
+  left: 127px;
+  width: calc(100% - 220px - 127px);
+  z-index: 106;
+}
+@media (max-width: 980px) {
+  .b-header__fixed {
+    width: calc(100% - 127px);
+  }
+}
+@media (max-width: 575px) {
+  .b-header__fixed {
+    position: static;
+    width: auto;
+    padding: 0;
+  }
+}
 .b-header a,
 .b-header a:hover,
 .b-header a:active {
@@ -1127,9 +1152,13 @@ a.b-button.i-theme-c {
   line-height: 44px;
 }
 button.i-theme-c:hover,
-a.b-button.i-theme-c:hover,
+a.b-button.i-theme-c:hover {
+  background-color: #7db17d;
+  color: #fff;
+}
 button.i-theme-c:active,
 a.b-button.i-theme-c:active {
+  background-color: #75c075;
   color: #fff;
 }
 button.i-disabled,
