--- a/source/layouts/includes/header-estate.jade
+++ b/source/layouts/includes/header-estate.jade
@@ -1,15 +1,17 @@
 ﻿header.b-header
 
-  a.b-estate-logo( href="" )
-    img( src="/upload/estate-logo/1.png" width="55" height="42" alt="" )
-    
-  .b-top-menu
-    
-    a( href="#estateAbout" ) I'M квартал
-    a( href="#estateData" ) данные проекта
-    a( href="#estateProgress" ) этап строительства
-    a( href="#estatePlan" ) планировка
-    a( href="#estatePrice" ) цены
-    a( href="#estateHypothec" ) ипотека
+  .b-header__fixed
 
-  .b-phone +7 499 999 34 45
+    a.b-estate-logo( href="" )
+      img( src="/upload/estate-logo/1.png" width="55" height="42" alt="" )
+      
+    .b-top-menu
+      
+      a( href="#estateAbout" ) I'M квартал
+      a( href="#estateData" ) данные проекта
+      a( href="#estateProgress" ) этап строительства
+      a( href="#estatePlan" ) планировка
+      a( href="#estatePrice" ) цены
+      a( href="#estateHypothec" ) ипотека
+
+    .b-phone +7 499 999 34 45
