--- a/source/styl/form.styl
+++ b/source/styl/form.styl
@@ -97,8 +97,12 @@ a.b-button
       font-size 9pt
       line-height 44px
       
-      &:hover,
+      &:hover
+        background-color #7db17d
+        color #fff
+      
       &:active
+        background-color #75c075
         color #fff
   
   &.i-disabled
