--- a/source/styl/header.styl
+++ b/source/styl/header.styl
@@ -88,6 +88,10 @@ a.b-estate-logo
     margin-right 24px
     display inline-block
     vertical-align middle
+    
+    @media ( max-width $breakpoint-mobile )
+      margin-right 0
+      display block
   
   @media ( max-width 767px )
     width 75%
