--- a/dest/template/template_styles.css
+++ b/dest/template/template_styles.css
@@ -932,6 +932,13 @@ a.b-estate-logo {
   display: inline-block;
   vertical-align: middle;
 }
+@media (max-width: 575px) {
+  .b-top-menu a,
+  .b-top-menu span {
+    margin-right: 0;
+    display: block;
+  }
+}
 @media (max-width: 767px) {
   .b-top-menu {
     width: 75%;
@@ -1186,6 +1193,11 @@ a.b-button.i-error {
   position: relative;
   z-index: 107;
 }
+@media (max-width: 575px) {
+  .b-side {
+    line-height: normal;
+  }
+}
 .b-side-icons {
   position: fixed;
   top: 0;
@@ -1197,6 +1209,7 @@ a.b-button.i-error {
   .b-side-icons {
     width: 100%;
     background-color: #333;
+    text-align: center;
   }
 }
 .b-side-icons .b-favorites-link {
@@ -1205,6 +1218,58 @@ a.b-button.i-error {
 @media (max-width: 575px) {
   .b-side-icons .b-favorites-link {
     display: none;
+  }
+}
+.b-side-search {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #1b1b1b;
+  transform: translate(-100%, 0);
+  -webkit-transform: translate(-100%, 0);
+  -moz-transform: translate(-100%, 0);
+  -ms-transform: translate(-100%, 0);
+  transition: all 0.5s ease;
+  -webkit-transition: all 0.5s ease;
+  -moz-transition: all 0.5s ease;
+  -ms-transition: all 0.5s ease;
+  z-index: 108;
+}
+.b-side-search__content {
+  padding: 0 50px 0 177px;
+}
+@media (max-width: 575px) {
+  .b-side-search__content {
+    padding: 50px 20px 20px 20px;
+  }
+}
+.b-side-search.i-open {
+  transform: translate(0, 0);
+  -webkit-transform: translate(0, 0);
+  -moz-transform: translate(0, 0);
+  -ms-transform: translate(0, 0);
+}
+.b-side-search.i-open .b-side-bar__content {
+  opacity: 1;
+  -webkit-opacity: 1;
+  -moz-opacity: 1;
+}
+@media (max-width: 575px) {
+  .b-side-search {
+    width: 100%;
+    height: 100%;
+    transform: translate(0, -100%);
+    -webkit-transform: translate(0, -100%);
+    -moz-transform: translate(0, -100%);
+    -ms-transform: translate(0, -100%);
+  }
+  .b-side-search.i-open {
+    transform: translate(0, 0);
+    -webkit-transform: translate(0, 0);
+    -moz-transform: translate(0, 0);
+    -ms-transform: translate(0, 0);
   }
 }
 .b-side-bar {
@@ -1262,7 +1327,25 @@ a.b-button.i-error {
   .b-side-bar__button {
     width: 48px;
     height: 45px;
-    margin: 0 auto;
+    display: inline-block;
+    margin: 6px 0 0;
+    background-size: 50%;
+  }
+}
+.b-side-bar__search {
+  display: block;
+  width: 35px;
+  height: 35px;
+  background: url("/template/images/icons/search-icon-zoom.svg") no-repeat center center;
+  background-size: cover;
+  margin: 48px 0 30px 45px;
+}
+@media (max-width: 575px) {
+  .b-side-bar__search {
+    width: 48px;
+    height: 45px;
+    display: inline-block;
+    margin: 6px 0 0;
     background-size: 50%;
   }
 }
@@ -1366,6 +1449,162 @@ a.b-button.i-error {
 @media (max-width: 575px) {
   .b-side-panel__button {
     display: none;
+  }
+}
+.b-side__search {
+  height: 80px;
+  background-color: #1b1b1b;
+  border-bottom: 1px solid #333;
+}
+.b-side__search__result {
+  padding: 30px 0 0 115px;
+  font-size: 10.5pt;
+  transition: all 0.2s ease 0.5s;
+  -webkit-transition: all 0.2s ease 0.5s;
+  -moz-transition: all 0.2s ease 0.5s;
+  -ms-transition: all 0.2s ease 0.5s;
+  transform: translate(-50px, 0);
+  -webkit-transform: translate(-50px, 0);
+  -moz-transform: translate(-50px, 0);
+  -ms-transform: translate(-50px, 0);
+  opacity: 0;
+  -webkit-opacity: 0;
+  -moz-opacity: 0;
+}
+.i-open .b-side__search__result {
+  opacity: 1;
+  -webkit-opacity: 1;
+  -moz-opacity: 1;
+}
+.b-side__search__result div {
+  margin-bottom: 2px;
+  transition: all 0.2s ease-in;
+  -webkit-transition: all 0.2s ease-in;
+  -moz-transition: all 0.2s ease-in;
+  -ms-transition: all 0.2s ease-in;
+  transform: translate(-50px, 0);
+  -webkit-transform: translate(-50px, 0);
+  -moz-transform: translate(-50px, 0);
+  -ms-transform: translate(-50px, 0);
+  opacity: 0;
+  -webkit-opacity: 0;
+  -moz-opacity: 0;
+}
+.i-open .b-side__search__result div {
+  transform: translate(0, 0);
+  -webkit-transform: translate(0, 0);
+  -moz-transform: translate(0, 0);
+  -ms-transform: translate(0, 0);
+  opacity: 1;
+  -webkit-opacity: 1;
+  -moz-opacity: 1;
+}
+.b-side__search__result div:nth-child(1) {
+  transition-delay: 0.5s;
+}
+.b-side__search__result div:nth-child(2) {
+  transition-delay: 0.6s;
+}
+.b-side__search__result div:nth-child(3) {
+  transition-delay: 0.7s;
+}
+.b-side__search__result div:nth-child(4) {
+  transition-delay: 0.8s;
+}
+.b-side__search__result div:nth-child(5) {
+  transition-delay: 0.9s;
+}
+div.b-side__search__result__header {
+  font-size: 8pt;
+  color: #999;
+  margin-bottom: 11px;
+}
+.i-menu-open .b-side__search {
+  border-top: 1px solid #f6f6f6;
+  border-bottom: 1px solid #f6f6f6;
+  padding: 8px 0 6px;
+}
+.b-side__search__close {
+  width: 24px;
+  height: 24px;
+  background: url("/template/images/icons/close-icon-white.svg") no-repeat center;
+  background-size: cover;
+  cursor: pointer;
+  position: absolute;
+  top: 28px;
+  right: 20px;
+  display: none;
+}
+@media (max-width: 575px) {
+  .b-side__search__close {
+    right: 0;
+  }
+}
+.i-searchshow .b-side__search {
+  animation: ac-gn-searchform-slide 1s 200ms both;
+}
+.i-searchshow.i-searchhide .b-side__search {
+  display: none;
+}
+.b-side__search-wrapper {
+  opacity: 0;
+  -webkit-opacity: 0;
+  -moz-opacity: 0;
+  transition: all 0.7s ease 0.7s;
+  -webkit-transition: all 0.7s ease 0.7s;
+  -moz-transition: all 0.7s ease 0.7s;
+  -ms-transition: all 0.7s ease 0.7s;
+}
+.i-open .b-side__search-wrapper {
+  opacity: 1;
+  -webkit-opacity: 1;
+  -moz-opacity: 1;
+}
+@media (max-width: 575px) {
+  .b-side__search-wrapper {
+    width: 100%;
+  }
+}
+.b-side__search .b-search-icon {
+  display: inline-block;
+  vertical-align: middle;
+  width: 24px;
+  height: 24px;
+  background: url("/template/images/icons/search-icon-zoom.svg") no-repeat center center;
+  margin: 2px 22px 0 16px;
+}
+.b-side__search .form-control {
+  width: 80%;
+  display: inline-block;
+  border: none;
+  box-shadow: none;
+  font-size: 13.5pt;
+  background-color: #1b1b1b;
+  height: 79px;
+  line-height: 79px;
+  padding: 0;
+}
+.b-side__search .form-control:focus {
+  outline: none;
+}
+.b-side__search .form-group {
+  position: relative;
+}
+@media (max-width: 767px) {
+  .b-side__search .b-search-icon {
+    position: absolute;
+    top: 30px;
+    left: -32px;
+    width: 22px;
+    height: 22px;
+    margin: 0;
+  }
+  .b-side__search .form-group {
+    margin: 0 0 0 40px;
+    position: relative;
+  }
+  .b-side__search .form-control {
+    font-size: 10pt;
   }
 }
 @media (max-width: 575px) {
