--- a/source/modules/slide-panel/style.styl
+++ b/source/modules/slide-panel/style.styl
@@ -4,6 +4,9 @@
   position relative
   z-index 107
   
+  @media ( max-width $breakpoint-mobile )
+    line-height normal  
+  
   &-icons
     position fixed
     top 0
@@ -14,12 +17,44 @@
     @media ( max-width $breakpoint-mobile )
       width 100%
       background-color #333
+      text-align center
     
     .b-favorites-link
       margin-left 45px
       
       @media ( max-width $breakpoint-mobile )
         display none
+
+  &-search
+    position fixed
+    top 0
+    left 0
+    width 100%
+    height 100%
+    background-color #1b1b1b
+    transform( translate(-100%, 0))
+    transition( all 0.5s ease )
+    z-index 108
+    
+    &__content
+      padding 0 50px 0 177px
+      
+      @media ( max-width $breakpoint-mobile )
+        padding 50px 20px 20px 20px
+    
+    &.i-open
+      transform( translate(0, 0))
+    
+      .b-side-bar__content
+        opacity(1)
+    
+    @media ( max-width $breakpoint-mobile )
+      width 100%
+      height 100%
+      transform( translate(0, -100%))
+      
+      &.i-open
+        transform( translate(0, 0))
 
   &-bar
     position fixed
@@ -57,7 +92,23 @@
       @media ( max-width $breakpoint-mobile )
         width 48px
         height 45px
-        margin 0 auto
+        display inline-block
+        margin 6px 0 0
+        background-size 50%
+    
+    &__search
+      display block
+      width 35px
+      height 35px
+      background embedurl( '/template/images/icons/search-icon-zoom.svg' ) no-repeat center center
+      background-size cover
+      margin 48px 0 30px 45px
+    
+      @media ( max-width $breakpoint-mobile )
+        width 48px
+        height 45px
+        display inline-block
+        margin 6px 0 0
         background-size 50%
     
     &__top
@@ -95,8 +146,6 @@
       
       .i-ipad &
         display none
-      
-    
     
     @media ( max-width $breakpoint-mobile )
       width 100%
@@ -176,6 +225,130 @@
       
       @media ( max-width $breakpoint-mobile )
         display none
+      
+  &__search
+    height 80px
+    background-color #1b1b1b
+    border-bottom 1px solid #333333
+  
+    &__result
+      padding 30px 0 0 115px
+      font-size 10.5pt
+      transition( all .2s ease .5s )
+      transform( translate( -50px, 0 ))
+      opacity 0
+      
+      .i-open &
+        opacity 1
+        
+      div
+        margin-bottom 2px
+        transition( all .2s ease-in )
+        transform( translate( -50px, 0 ))
+        opacity 0
+      
+        .i-open &
+          transform( translate(0, 0))
+          opacity 1
+        
+        &:nth-child(1)
+          transition-delay .5s
+        
+        &:nth-child(2)
+          transition-delay .6s
+        
+        &:nth-child(3)
+          transition-delay .7s
+        
+        &:nth-child(4)
+          transition-delay .8s
+        
+        &:nth-child(5)
+          transition-delay .9s
+        
+      
+      div&__header
+        font-size 8pt
+        color #999
+        margin-bottom 11px
+  
+    .i-menu-open &
+      border-top 1px solid #f6f6f6
+      border-bottom 1px solid #f6f6f6
+      padding 8px 0 6px
+  
+    &__close
+      width 24px
+      height 24px
+      background url( '/template/images/icons/close-icon-white.svg' ) no-repeat center
+      background-size cover
+      cursor pointer
+      position absolute
+      top 28px
+      right 20px
+      display none
+      
+      @media ( max-width $breakpoint-mobile )
+        right 0
+  
+    .i-searchshow &
+      animation ac-gn-searchform-slide 1s 200ms both
+  
+    .i-searchshow.i-searchhide &
+      display none
+    
+    &-wrapper
+      opacity(0)
+      transition( all .7s ease .7s )
+      //display none
+      
+      .i-open &
+        opacity(1)
+        
+      @media ( max-width $breakpoint-mobile )
+        width 100%
+    
+    .b-search-icon
+      display inline-block
+      vertical-align middle
+      width 24px
+      height 24px
+      background url(/template/images/icons/search-icon-zoom.svg) no-repeat center center
+      margin 2px 22px 0 16px
+      
+    .form-control
+      width 80%
+      display inline-block
+      border none
+      box-shadow none
+      font-size 13.5pt
+      background-color #1b1b1b
+      height 79px
+      line-height 79px
+      padding 0
+      
+      &:focus
+        outline none
+        
+    .form-group
+      position relative
+    
+    @media ( max-width 767px )
+      
+      .b-search-icon
+        position absolute
+        top 30px
+        left -32px
+        width 22px
+        height 22px
+        margin 0
+        
+      .form-group
+        margin 0 0 0 40px
+        position relative
+        
+      .form-control
+        font-size 10pt
 
 .b-logo
         
