--- a/source/styl/gui.styl
+++ b/source/styl/gui.styl
@@ -19,7 +19,7 @@ a
   &:hover,
   &:active,
   &:focus
-    opacity .7
+    color #33ccff
   
 b
   font-weight 700
@@ -84,11 +84,12 @@ ul
     padding 20px
     
   a
-    &,
+    color $link-color
+    
     &:hover,
     &:active,
     &:focus
-      color $link-color
+      opacity .7
       
 .b-page-content
   padding 40px 50px
