--- a/source/layouts/includes/header-estate.jade
+++ b/source/layouts/includes/header-estate.jade
@@ -2,8 +2,7 @@
 
   .b-header__fixed
 
-    a.b-estate-logo( href="" )
-      img( src="/upload/estate-logo/2.png" width="150" height="50" alt="" )
+    a.b-estate-logo( href="" style="background-image: url( '/upload/estate-logo/2.png' );" )
       
     .b-top-menu
       
