--- a/dest/components/catalog.group/style.css
+++ b/dest/components/catalog.group/style.css
@@ -48,6 +48,11 @@
 .b-estate {
   margin-top: -20px;
 }
+@media (max-width: 630px) {
+  .b-estate h1 {
+    text-align: center;
+  }
+}
 .b-estate__bar {
   margin-bottom: 23px;
 }
