Issue 16052 - Estate catalog.gallery changes

--- a/markup/components/catalog.element/template.html
+++ b/markup/components/catalog.element/template.html
@@ -4,12 +4,7 @@
 <script src="/components/catalog.element/script.js"></script>
 <div itemscope="itemscope" itemtype="http://schema.org/Residence" class="b-estate">
   <h1>Двухуровневая квартира общ. пл. 1040 кв.м., свободная планировка</h1>
-  <div class="b-estate__bar">
-    <!-- start /components/favorite/-->
-    <link rel="stylesheet" href="/components/favorite/style.css"/>
-    <script src="/components/favorite/script.js"></script><a href="/components/favorite/send.json?id=456" title="Добавить в избранное" class="b-favorite-icon"></a><a href="/components/favorite/send.json?id=456" title="Убрать из избранного" class="b-favorite-icon i-on"></a>
-    <!-- end /components/favorite/--><a href="#" target="_blank" class="b-address-link"><span class="b-address-link__text">Россия, Москва, Молочный переулок, дом 3</span></a>
-  </div>
+  <div class="b-estate__bar"><a href="#" target="_blank" class="b-address-link">Россия, Москва, Молочный переулок, дом 3</a></div>
   <hr class="i-line"/>
   <div class="b-estate__props">
     <div class="b-estate__props-item">
@@ -58,35 +53,36 @@
   <hr/>
   <!-- start /components/catalog.gallery/-->
   <link href="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.3/fotorama.css" rel="stylesheet"/>
-  <link rel="stylesheet" href="/components/catalog.gallery/style.css"/>
   <script src="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.3/fotorama.js"></script>
+  <link rel="stylesheet" href="/components/catalog.gallery/style.css"/>
+  <script src="/components/catalog.gallery/script.js"></script>
   <div data-width="100%" data-ratio="3/2" data-loop="true" data-allowfullscreen="true" class="fotorama">
-    <div>
-      <div style="background-image: url(/upload/gallery/1.jpg);" itemprop="photo" class="b-catalog-gallery__img"></div>
+    <div class="b-catalog-gallery__img">
+      <div style="background-image: url(/upload/gallery/1.jpg);" itemprop="photo"></div>
     </div>
-    <div>
-      <div style="background-image: url(/upload/gallery/2.jpg);" itemprop="photo" class="b-catalog-gallery__img"></div>
+    <div class="b-catalog-gallery__img">
+      <div style="background-image: url(/upload/gallery/2.jpg);" itemprop="photo"></div>
     </div>
-    <div>
-      <div style="background-image: url(/upload/gallery/3.jpg);" itemprop="photo" class="b-catalog-gallery__img"></div>
+    <div class="b-catalog-gallery__img">
+      <div style="background-image: url(/upload/gallery/3.jpg);" itemprop="photo"></div>
     </div>
-    <div>
-      <div style="background-image: url(/upload/gallery/4.jpg);" itemprop="photo" class="b-catalog-gallery__img"></div>
+    <div class="b-catalog-gallery__img">
+      <div style="background-image: url(/upload/gallery/4.jpg);" itemprop="photo"></div>
     </div>
-    <div>
-      <div style="background-image: url(/upload/gallery/5.jpg);" itemprop="photo" class="b-catalog-gallery__img"></div>
+    <div class="b-catalog-gallery__img">
+      <div style="background-image: url(/upload/gallery/5.jpg);" itemprop="photo"></div>
     </div>
-    <div>
-      <div style="background-image: url(/upload/gallery/6.jpg);" itemprop="photo" class="b-catalog-gallery__img"></div>
+    <div class="b-catalog-gallery__img">
+      <div style="background-image: url(/upload/gallery/6.jpg);" itemprop="photo"></div>
     </div>
-    <div>
-      <div style="background-image: url(/upload/gallery/7.jpg);" itemprop="photo" class="b-catalog-gallery__img"></div>
+    <div class="b-catalog-gallery__img">
+      <div style="background-image: url(/upload/gallery/7.jpg);" itemprop="photo"></div>
     </div>
-    <div>
-      <div style="background-image: url(/upload/gallery/8.jpg);" itemprop="photo" class="b-catalog-gallery__img"></div>
+    <div class="b-catalog-gallery__img">
+      <div style="background-image: url(/upload/gallery/8.jpg);" itemprop="photo"></div>
     </div>
-    <div>
-      <div style="background-image: url(/upload/gallery/9.jpg);" itemprop="photo" class="b-catalog-gallery__img"></div>
+    <div class="b-catalog-gallery__img">
+      <div style="background-image: url(/upload/gallery/9.jpg);" itemprop="photo"></div>
     </div>
   </div>
   <!-- end /components/catalog.gallery/-->
