--- a/markup/components/catalog.group/template.html
+++ b/markup/components/catalog.group/template.html
@@ -58,35 +58,36 @@
   <hr/>
   <!-- start /components/catalog.gallery/-->
   <link href="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.3/fotorama.css" rel="stylesheet"/>
-  <link rel="stylesheet" href="/components/catalog.gallery/style.css"/>
   <script src="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.3/fotorama.js"></script>
+  <link rel="stylesheet" href="/components/catalog.gallery/style.css"/>
+  <script src="/components/catalog.gallery/script.js"></script>
   <div data-width="100%" data-ratio="3/2" data-loop="true" data-allowfullscreen="true" class="fotorama">
-    <div>
-      <div style="background-image: url(/upload/gallery/1.jpg);" itemprop="photo" class="b-catalog-gallery__img"></div>
+    <div class="b-catalog-gallery__img">
+      <div style="background-image: url(/upload/gallery/1.jpg);" itemprop="photo"></div>
     </div>
-    <div>
-      <div style="background-image: url(/upload/gallery/2.jpg);" itemprop="photo" class="b-catalog-gallery__img"></div>
+    <div class="b-catalog-gallery__img">
+      <div style="background-image: url(/upload/gallery/2.jpg);" itemprop="photo"></div>
     </div>
-    <div>
-      <div style="background-image: url(/upload/gallery/3.jpg);" itemprop="photo" class="b-catalog-gallery__img"></div>
+    <div class="b-catalog-gallery__img">
+      <div style="background-image: url(/upload/gallery/3.jpg);" itemprop="photo"></div>
     </div>
-    <div>
-      <div style="background-image: url(/upload/gallery/4.jpg);" itemprop="photo" class="b-catalog-gallery__img"></div>
+    <div class="b-catalog-gallery__img">
+      <div style="background-image: url(/upload/gallery/4.jpg);" itemprop="photo"></div>
     </div>
-    <div>
-      <div style="background-image: url(/upload/gallery/5.jpg);" itemprop="photo" class="b-catalog-gallery__img"></div>
+    <div class="b-catalog-gallery__img">
+      <div style="background-image: url(/upload/gallery/5.jpg);" itemprop="photo"></div>
     </div>
-    <div>
-      <div style="background-image: url(/upload/gallery/6.jpg);" itemprop="photo" class="b-catalog-gallery__img"></div>
+    <div class="b-catalog-gallery__img">
+      <div style="background-image: url(/upload/gallery/6.jpg);" itemprop="photo"></div>
     </div>
-    <div>
-      <div style="background-image: url(/upload/gallery/7.jpg);" itemprop="photo" class="b-catalog-gallery__img"></div>
+    <div class="b-catalog-gallery__img">
+      <div style="background-image: url(/upload/gallery/7.jpg);" itemprop="photo"></div>
     </div>
-    <div>
-      <div style="background-image: url(/upload/gallery/8.jpg);" itemprop="photo" class="b-catalog-gallery__img"></div>
+    <div class="b-catalog-gallery__img">
+      <div style="background-image: url(/upload/gallery/8.jpg);" itemprop="photo"></div>
     </div>
-    <div>
-      <div style="background-image: url(/upload/gallery/9.jpg);" itemprop="photo" class="b-catalog-gallery__img"></div>
+    <div class="b-catalog-gallery__img">
+      <div style="background-image: url(/upload/gallery/9.jpg);" itemprop="photo"></div>
     </div>
   </div>
   <!-- end /components/catalog.gallery/-->
