--- a/source/components/catalog.element/template.jade
+++ b/source/components/catalog.element/template.jade
@@ -8,11 +8,8 @@ script( src="/components/catalog.element/script.js" )
   h1 Двухуровневая квартира общ. пл. 1040 кв.м., свободная планировка
   
   .b-estate__bar
-  
-    include ../../components/favorite/template
     
-    a.b-address-link( href="#" target="_blank" )
-      span.b-address-link__text Россия, Москва, Молочный переулок, дом 3
+    a.b-address-link( href="#" target="_blank" ) Россия, Москва, Молочный переулок, дом 3
       
   hr.i-line
       
