--- a/source/styl/gui.styl
+++ b/source/styl/gui.styl
@@ -92,7 +92,7 @@ ul
   box-sizing border-box
   
   @media( max-width $breakpoint-mobile )
-    padding 20px
+    padding 10px 20px
     
   a
     color $link-color
@@ -277,17 +277,7 @@ ul
     
 
 .b-address-link
-  display inline-block
-  vertical-align top
-  padding-left 50px
-  background embedurl("img/address-icon.png") no-repeat 0 center
-  line-height 30px
   font-size $font-size-sm
-  
-  &__text
-    display inline-block
-    vertical-align middle
-    line-height $line-height-sm
   
 .b-favorites-link
   display block
