--- a/source/components/catalog.gallery/style.styl
+++ b/source/components/catalog.gallery/style.styl
@@ -75,9 +75,15 @@
     background embedurl( 'img/right-arrow.svg' ) no-repeat center
     right 15px
     
+    @media( max-width 767px )
+      display none !important
+    
   .fotorama__arr--prev
     background embedurl( 'img/left-arrow.svg' ) no-repeat center
     left 15px
+    
+    @media( max-width 767px )
+      display none !important
     
   &--fullscreen .fotorama__fullscreen-icon
     background embedurl( 'img/close.svg' ) no-repeat center !important
@@ -87,13 +93,27 @@
     
 .fotorama__fullscreen-icon
   background embedurl( 'img/zoom.svg' ) no-repeat center !important
-  top 15px
-  right 15px
-  width 64px
-  height 64px
+  top 10px
+  right 10px
+  width 32px
+  height 32px
   
 .b-catalog-gallery__img
-  background-repeat no-repeat
-  background-position center
-  background-size cover
-  padding-top 66.67%
+  height 100%
+
+  div
+    width 100%
+    height 100%
+    background-repeat no-repeat
+    background-position center
+    background-size cover
+    
+.fotorama__stage
+  width calc( 100% + 40px ) !important
+  height 400px
+  
+.fotorama__wrap
+  max-width none
+  
+.fotorama
+  margin 0 -20px
