--- a/source/components/catalog.gallery/template.jade
+++ b/source/components/catalog.gallery/template.jade
@@ -1,26 +1,15 @@
 // start /components/catalog.gallery/
 
-//-link( rel="stylesheet", href="/components/catalog.gallery/slideme.css" )
 link( href="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.3/fotorama.css" rel="stylesheet" )
-link( rel="stylesheet", href="/components/catalog.gallery/style.css" )
-//-script( src="/components/catalog.gallery/slideme2.js" )
-//-script( src="/components/catalog.gallery/script.js" )
 script( src="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.3/fotorama.js" )
+link( rel="stylesheet", href="/components/catalog.gallery/style.css" )
+script( src="/components/catalog.gallery/script.js" )
 
-//-#gallery
-  ul.slideme
-    - var n = 0
-    while n < 9
-      - n++
-      li
-        img( src="/upload/gallery/#{n}.jpg" )
-        
 .fotorama( data-width="100%" data-ratio="3/2" data-loop="true" data-allowfullscreen="true" )
   - var n = 0
   while n < 9
     - n++
-    div
-      .b-catalog-gallery__img( style="background-image: url(/upload/gallery/#{n}.jpg);" itemprop="photo" )
-      //-img( src="/upload/gallery/#{n}.jpg" alt="" itemprop="photo" )
+    .b-catalog-gallery__img
+      div( style="background-image: url(/upload/gallery/#{n}.jpg);" itemprop="photo" )
 
 // end /components/catalog.gallery/
