Fotorama mobile fixes

--- a/source/components/catalog.gallery/style.styl
+++ b/source/components/catalog.gallery/style.styl
@@ -108,12 +108,13 @@
     background-position center
     background-size cover
     
-.fotorama__stage
-  width calc( 100% + 40px ) !important
-  height 400px
-  
-.fotorama__wrap
-  max-width none
-  
-.fotorama
-  margin 0 -20px
+@media( max-width 767px )
+  .fotorama__stage
+    width calc( 100% + 40px ) !important
+    height 400px
+    
+  .fotorama__wrap
+    max-width none
+    
+  .fotorama
+    margin 0 -20px
