--- a/source/components/catalog.gallery/style.styl
+++ b/source/components/catalog.gallery/style.styl
@@ -93,10 +93,16 @@
     
 .fotorama__fullscreen-icon
   background embedurl( 'img/zoom.svg' ) no-repeat center !important
-  top 10px
-  right 10px
-  width 32px
-  height 32px
+  top 15px
+  right 15px
+  width 64px
+  height 64px
+  
+  @media( max-width 767px )
+    top 10px
+    right 10px
+    width 32px
+    height 32px
   
 .b-catalog-gallery__img
   height 100%
