--- a/source/modules/slide-panel/style.styl
+++ b/source/modules/slide-panel/style.styl
@@ -40,10 +40,10 @@
     z-index 112
     
     &__content
-      padding 0 50px 0 177px
+      padding 0 55px 0 177px
       
       @media ( max-width $breakpoint-mobile )
-        padding 50px 20px 20px 20px
+        padding 55px 20px 20px 20px
     
     &.i-open
       transform( translate(0, 0))
@@ -328,8 +328,8 @@
       box-shadow none
       font-size 13.5pt
       background-color #1b1b1b
-      height 79px
-      line-height 79px
+      height 30px
+      line-height 30px
       padding 0
       
       &:focus
@@ -337,6 +337,7 @@
         
     .form-group
       position relative
+      padding 24px 0 25px
     
     @media ( max-width 767px )
       
@@ -354,6 +355,7 @@
         
       .form-control
         font-size 10pt
+        width 240px
 
 .b-logo
         
