--- a/source/modules/slide-panel/style.styl
+++ b/source/modules/slide-panel/style.styl
@@ -24,6 +24,10 @@
     
     .b-favorites-link
       margin-left 45px
+      transition( opacity .3s ease )
+      
+      &:hover
+        opacity .7
       
       @media ( max-width $breakpoint-mobile )
         display none
@@ -91,6 +95,10 @@
       background embedurl( 'img/menu.svg' ) no-repeat center center
       background-size cover
       margin 48px 0 40px 45px
+      transition( opacity .3s ease )
+      
+      &:hover
+        opacity .7
     
       @media ( max-width $breakpoint-mobile )
         width 48px
@@ -107,6 +115,10 @@
       background embedurl( '/template/images/icons/search-icon-zoom.svg' ) no-repeat center center
       background-size cover
       margin 40px 0 40px 45px
+      transition( opacity .3s ease )
+      
+      &:hover
+        opacity .7
     
       @media ( max-width $breakpoint-mobile )
         width 48px
@@ -159,8 +171,6 @@
       
       &.i-open
         transform( translate(0, 0))
-      
-    
     
     menu
       list-style-type none
@@ -292,6 +302,10 @@
       top 28px
       right 20px
       display none
+      transition( opacity .3s ease )
+      
+      &:hover
+        opacity .7
       
       @media ( max-width $breakpoint-mobile )
         right 0
@@ -328,8 +342,8 @@
       box-shadow none
       font-size 13.5pt
       background-color #1b1b1b
-      height 30px
-      line-height 30px
+      //height 30px
+      line-height normal
       padding 0
       
       &:focus
@@ -337,7 +351,7 @@
         
     .form-group
       position relative
-      padding 24px 0 25px
+      padding 30px 0 31px
     
     @media ( max-width 767px )
       
@@ -356,6 +370,11 @@
       .form-control
         font-size 10pt
         width 240px
+    
+    @media ( max-width 320px )
+    
+      .form-control
+        width 200px
 
 .b-logo
         
